--- a/VRChat/70/968870.html
+++ b/VRChat/70/968870.html
@@ -7,7 +7,7 @@
       【個人商用ライセンス版】川原えむ メイド服01 - 黒柚式のソレ - BOOTH
     </title>
     <meta name="description" content=
-    "利用規約にご同意いただける方のみご購入ください。 また、日本語以外でのご質問にはお答えしかねます。ご了承ください。 このキャラクターはフィクションです。実在の人物や団体などとは関係ありません。 また、キャラクターの設定を推奨・強制するものではありません。 日本国外のサイトで販売されているものは非正規品です。 マルウェアが含まれる可能性があるので購入しないでください。 Those sold at sites outside of Japan are non-genuine. Do not purchase as it may contain malware.">
+    "利用規約にご同意いただける方のみご購入ください。 また、日本語以外でのご質問にはお答えしかねます。ご了承ください。 商品はzipファイルで圧縮されています。zipファイルを展開してご利用ください。 また、商品のデータは日本語版Windowsで使用する事を想定し動作確認をしています。それ以外のOSではファイルを正常に扱えない場合があります。ご了承ください。 このキャラクターはフィクションです。実在の人物や団体などとは関係ありません。 また、キャラクターの設定を推奨・強制するものではありません。 日本国外のサイトで販売されているものは非正規品です。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/968870">
@@ -16,14 +16,14 @@
     <meta name="twitter:title" content=
     "【個人商用ライセンス版】川原えむ メイド服01 - 黒柚式のソレ - BOOTH">
     <meta name="twitter:description" content=
-    "利用規約にご同意いただける方のみご購入ください。 また、日本語以外でのご質問にはお答えしかねます。ご了承ください。 このキャラクターはフィクションです。実在の人物や団体などとは関係ありません。 また、キャラクターの設定を推奨・強制するものではありません。 日本国外のサイトで販売されているものは非正規品です。 マルウェアが含まれる可能性があるので購入しないでください。 Those sold at sites outside of Japan are non-genuine. Do not purchase as it may contain malware.">
+    "利用規約にご同意いただける方のみご購入ください。 また、日本語以外でのご質問にはお答えしかねます。ご了承ください。 商品はzipファイルで圧縮されています。zipファイルを展開してご利用ください。 また、商品のデータは日本語版Windowsで使用する事を想定し動作確認をしています。それ以外のOSではファイルを正常に扱えない場合があります。ご了承ください。 このキャラクターはフィクションです。実在の人物や団体などとは関係ありません。 また、キャラクターの設定を推奨・強制するものではありません。 日本国外のサイトで販売されているものは非正規品です。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/5260429d-7507-47d3-9a6c-73fe7e29ce1a/i/968870/51adc43b-6be6-4caa-a47e-5f10cce58a76_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "【個人商用ライセンス版】川原えむ メイド服01 - 黒柚式のソレ - BOOTH">
     <meta property="og:description" content=
-    "利用規約にご同意いただける方のみご購入ください。 また、日本語以外でのご質問にはお答えしかねます。ご了承ください。 このキャラクターはフィクションです。実在の人物や団体などとは関係ありません。 また、キャラクターの設定を推奨・強制するものではありません。 日本国外のサイトで販売されているものは非正規品です。 マルウェアが含まれる可能性があるので購入しないでください。 Those sold at sites outside of Japan are non-genuine. Do not purchase as it may contain malware.">
+    "利用規約にご同意いただける方のみご購入ください。 また、日本語以外でのご質問にはお答えしかねます。ご了承ください。 商品はzipファイルで圧縮されています。zipファイルを展開してご利用ください。 また、商品のデータは日本語版Windowsで使用する事を想定し動作確認をしています。それ以外のOSではファイルを正常に扱えない場合があります。ご了承ください。 このキャラクターはフィクションです。実在の人物や団体などとは関係ありません。 また、キャラクターの設定を推奨・強制するものではありません。 日本国外のサイトで販売されているものは非正規品です。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/5260429d-7507-47d3-9a6c-73fe7e29ce1a/i/968870/51adc43b-6be6-4caa-a47e-5f10cce58a76_base_resized.jpg">
     <meta property="og:url" content=
@@ -79,11 +79,11 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/ae2c55d2ea0ba54025f6.js" defer=
+    "https://asset.booth.pm/assets/14f10d23ffa1b8daf619.js" defer=
     "defer" nonce=
-    "zk2GHRxaqzvwB+D8WunxGczXt4Dh9+fiSpYjHeLOIdY="></script>
+    "nCSzVEasgqhe+9ZbLBANbAZdyk5gC9cwBybJnDIECUY="></script>
     <script type="application/ld+json">
-    {"@context":"https://schema.org","@type":"Product","name":"【個人商用ライセンス版】川原えむ メイド服01","description":"利用規約にご同意いただける方のみご購入ください。\nまた、日本語以外でのご質問にはお答えしかねます。ご了承ください。\n\nこのキャラクターはフィクションです。実在の人物や団体などとは関係ありません。\nまた、キャラクターの設定を推奨・強制するものではありません。\n\n日本国外のサイトで販売されているものは非正規品です。\nマルウェアが含まれる可能性があるので購入しないでください。\nThose sold at sites outside of Japan are non-genuine.\nDo not purchase as it may contain malware.\n在日本以外的地方销售的产品是非正品的。\n不要购买，因为它可能包含恶意软件。\n일본 외 사이트에서 판매/배포되는 것은 정품이 아닙니다. 랜섬웨어 혹은 멀웨어 등의 악성 코드가 포함되어 있을 수 있으므로 구입하지 마세요.","url":"https://booth.pm/ja/items/968870","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3500"},"image":"https://booth.pximg.net/c/620x620/5260429d-7507-47d3-9a6c-73fe7e29ce1a/i/968870/51adc43b-6be6-4caa-a47e-5f10cce58a76_base_resized.jpg"}
+    {"@context":"https://schema.org","@type":"Product","name":"【個人商用ライセンス版】川原えむ メイド服01","description":"利用規約にご同意いただける方のみご購入ください。\nまた、日本語以外でのご質問にはお答えしかねます。ご了承ください。\n\n商品はzipファイルで圧縮されています。zipファイルを展開してご利用ください。\nまた、商品のデータは日本語版Windowsで使用する事を想定し動作確認をしています。それ以外のOSではファイルを正常に扱えない場合があります。ご了承ください。\n\nこのキャラクターはフィクションです。実在の人物や団体などとは関係ありません。\nまた、キャラクターの設定を推奨・強制するものではありません。\n\n日本国外のサイトで販売されているものは非正規品です。\nマルウェアが含まれる可能性があるので購入しないでください。\nThose sold at sites outside of Japan are non-genuine.\nDo not purchase as it may contain malware.\n在日本以外的地方销售的产品是非正品的。\n不要购买，因为它可能包含恶意软件。\n일본 외 사이트에서 판매/배포되는 것은 정품이 아닙니다. 랜섬웨어 혹은 멀웨어 등의 악성 코드가 포함되어 있을 수 있으므로 구입하지 마세요.","url":"https://booth.pm/ja/items/968870","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3500"},"image":"https://booth.pximg.net/c/620x620/5260429d-7507-47d3-9a6c-73fe7e29ce1a/i/968870/51adc43b-6be6-4caa-a47e-5f10cce58a76_base_resized.jpg"}
     </script>
     <link rel="shortcut icon" type="image/x-icon" href=
     "https://asset.booth.pm/favicon.ico">
@@ -351,6 +351,8 @@
                           "autolink break-words font-noto-sans typography-16 whitespace-pre-line">
                             利用規約にご同意いただける方のみご購入ください。
                             また、日本語以外でのご質問にはお答えしかねます。ご了承ください。
+                            商品はzipファイルで圧縮されています。zipファイルを展開してご利用ください。
+                            また、商品のデータは日本語版Windowsで使用する事を想定し動作確認をしています。それ以外のOSではファイルを正常に扱えない場合があります。ご了承ください。
                             このキャラクターはフィクションです。実在の人物や団体などとは関係ありません。
                             また、キャラクターの設定を推奨・強制するものではありません。
                             日本国外のサイトで販売されているものは非正規品です。
@@ -402,6 +404,7 @@
                               ┃■VRM版について
                               ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
                               バーチャルキャスト（https://virtualcast.jp/）などでご利用いただけます。
+                              VRM形式のバージョンは0.xです。
                               利用に関する細かい規定は下記ページをご覧ください。
                               http://black-yuzunyan.lolipop.jp/mmd_models_acceptable_use_policy
                               ┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
@@ -698,7 +701,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;M3-2023秋&quot;,&quot;value&quot;:&quot;m3-2023a&quot;},{&quot;label&quot;:&quot;#エアブー感謝祭-231027-&quot;,&quot;value&quot;:&quot;air-boo-1027&quot;},{&quot;label&quot;:&quot;関西コミティア68&quot;,&quot;value&quot;:&quot;k-comitia68&quot;},{&quot;label&quot;:&quot;TOKYO FES Oct.2023&quot;,&quot;value&quot;:&quot;tokyofes-oct2023&quot;},{&quot;label&quot;:&quot;#にじそうさく08&quot;,&quot;value&quot;:&quot;nijisousaku08&quot;},{&quot;label&quot;:&quot;J.GARDEN54&quot;,&quot;value&quot;:&quot;j-garden54&quot;},{&quot;label&quot;:&quot;NEOKET5&quot;,&quot;value&quot;:&quot;neoket5&quot;},{&quot;label&quot;:&quot;COMIC1☆23&quot;,&quot;value&quot;:&quot;comic1-23&quot;},{&quot;label&quot;:&quot;GOOD COMIC CITY 29&quot;,&quot;value&quot;:&quot;good-comiccity29&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230922-&quot;,&quot;value&quot;:&quot;comiccity-online-230922&quot;}]"
+    "[{&quot;label&quot;:&quot;SC2023 Autumn&quot;,&quot;value&quot;:&quot;sc2023autumn&quot;},{&quot;label&quot;:&quot;M3-2023秋&quot;,&quot;value&quot;:&quot;m3-2023a&quot;},{&quot;label&quot;:&quot;#エアブー感謝祭-231027-&quot;,&quot;value&quot;:&quot;air-boo-1027&quot;},{&quot;label&quot;:&quot;関西コミティア68&quot;,&quot;value&quot;:&quot;k-comitia68&quot;},{&quot;label&quot;:&quot;TOKYO FES Oct.2023&quot;,&quot;value&quot;:&quot;tokyofes-oct2023&quot;},{&quot;label&quot;:&quot;#にじそうさく08&quot;,&quot;value&quot;:&quot;nijisousaku08&quot;},{&quot;label&quot;:&quot;J.GARDEN54&quot;,&quot;value&quot;:&quot;j-garden54&quot;},{&quot;label&quot;:&quot;NEOKET5&quot;,&quot;value&quot;:&quot;neoket5&quot;},{&quot;label&quot;:&quot;COMIC1☆23&quot;,&quot;value&quot;:&quot;comic1-23&quot;},{&quot;label&quot;:&quot;GOOD COMIC CITY 29&quot;,&quot;value&quot;:&quot;good-comiccity29&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
